# mck

./: .clang-format  .gitignore  CMakeLists.txt  README.md  mck.cpp
src/: CMakeLists.txt  mck.cpp
